# easy-particle

./: .gitignore  CMakeLists.txt  README.md
data/: amdc_ion_2020.txt
include/: constants.h  nuclear_data.h  particle.h  path_manager.h
src/: CMakeLists.txt  nuclear_data.cpp  particle.cpp  path_manager.cpp
tests/: CMakeLists.txt  breakup.cpp  energy_loss.cpp  scatter.cpp
tests/data/: 12N-11C-1H-cangle-energy.txt  12N-11C-1H-cangle-langle.txt  12N-11C-1H-langle-energy.txt  14C-10Be-4He-cangle-energy.txt  14C-10Be-4He-cangle-langle.txt  14C-10Be-4He-langle-energy.txt  14C-2H-cangle-energy.txt  14C-2H-cangle-langle.txt  14C-2H-langle-energy.txt  16C-10Be-6He-cangle-energy.txt  16C-10Be-6He-cangle-langle.txt  16C-10Be-6He-langle-energy.txt  16C-1H-cangle-energy.txt  16C-1H-cangle-langle.txt  16C-1H-langle-energy.txt  20Ne-9Be-cangle-energy.txt  20Ne-9Be-cangle-langle.txt  20Ne-9Be-langle-energy.txt
